@@ -1,3 +1,4 @@
 * Bazaar (v1) SCM Module: Edd Dumbill <edd@usefulinc.com>
 * Perforce SCM Module: Richard McMahon <richie.mcmahon@gmail.com>
 * Bazaar-NG SCM Module: Damien Merenne <dam@capsule.org>
+* Mercurial SCM Module: Matthew Elder <mae@mindflowsolutions.com>
